--- a/train/cedrick/Untitled.ipynb
+++ b/train/cedrick/Untitled.ipynb
@@ -8,7 +8,9 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from keras.preprocessing.image import ImageDataGenerator"
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
